--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,49 @@
  *= require_tree .
  *= require_self
  */
+h1 {
+  font-size: larger;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 30px;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.list {
+  list-style: none;
+}
+
+.links {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.links a {
+  text-decoration: none;
+  color: white;
+  background-color: #0077b6;
+  display: inline-block;
+  padding: 10px 20px;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  margin: 15px;
+}
+
+.list a {
+  text-decoration: none;
+  color: #0077b6;
+  font-size: 20px;
+}
+
+.links a:hover {
+  font-weight: bolder;
+  color: white;
+}
